--- a/index.html
+++ b/index.html
@@ -4,4 +4,28 @@
 <h1>EM's Base</h1>
 <p>here is where I put my file for calc<br />contact me if need. elvismao@ctemplar.com</p>
 <p>BTW,if I have time I'll move all stuff from <a href="https://edmbase.wixsite.com/base">my site</a> to here</p>
-<p>anyway, enjoy (:</p></body></html>
+<p>anyway, enjoy (:</p>
+  <form action="processorder.php" method="post">
+  <table>
+    <tr bgcolor="#cccccc">
+      <td width="150">Item</td>
+      <td width="15">Quantity</td>
+    </tr>
+    <tr>
+      <td>Tires</td>
+      <td align="center"><input type="text" name="tireqty" size="3" maxlength="3" /></td>
+    </tr>
+    <tr>
+      <td>Oil</td>
+      <td align="center"><input type="text" name="oilqty" size="3" maxlength="3" /></td>
+    </tr>
+    <tr>
+      <td>Spark Plugs</td>
+      <td align="center"><input type="text" name="sparkqty" size="3" maxlength="3" /></td>
+    </tr>
+    <tr>
+      <td colspan="2" align="center"><input type="submit" value="Submit Order" /></td>
+    </tr>
+  </table>
+</form>
+  </body></html>
