--- a/code/apitest/index.html
+++ b/code/apitest/index.html
@@ -82,7 +82,7 @@
       </div>
     </div>
   </div>
-<div id="footer">製作 by <a href="https://ianchuu.com" target="_blank">Ian Chu.</a></div>
+<div id="footer">製作 by <a href="https://edmbase.wixsite.com/base" target="_blank">EM</a></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- Bootstrap core JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
